Cleaning up tracegen code